# dsa-oop-harness

./: .gitignore  .pre-commit-config.yaml  CURRICULUM.md  LICENSE  NOTES.md  README.md  pyproject.toml
.hermes/: daily_reminder.py
docs/: index.html
quizzes/: __init__.py
quizzes/week1/: __init__.py  day1_quiz.py  day2_quiz.py  day3_quiz.py  day4_quiz.py  day5_quiz.py  day6_quiz.py  day7_quiz.py  week1_assessment.py
src/: __init__.py
src/documind/: __init__.py
src/documind/core/: __init__.py  document.py  processors.py
src/week1_oop/day1_classes_self/: lesson.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py
tests/week1/: test_day1.py
